# DeepCRE_Vitis

./: .gitignore  .lintr  pyproject.toml  readme.md
.Rproj.user/64C1BF62/pcs/: files-pane.pper  windowlayoutstate.pper
src/deepcre/: create_generic_features.py  create_target_file.py  create_validation_genes.py  deepcre_crosspredict.py  deepcre_interpret.py  deepcre_motifs.py  deepcre_predict.py  extract_sequences.py  parsing.py  train_models.py  train_models_vitis.py  utils.py
src/moca/: readme.md  utils.R
src/moca/mo_clu/: cluster_motifs.R  cluster_pfms.R  visualise_trees.R
src/moca/mo_go/: 00_convert_gene_ids.R  00_convert_gmt.R  01_mo_gene_mapper_vitis.R  01_motif_gene_mapper.R  02_motif_co_occ.R  02_motif_predictability_vitis.R  03_clade_shared_genes.R  03_functional_enrichment.R  04_go_enrichment.R  05_gsea_importance.R  06_cross_metacluster_co_occ.R  analyze_background_composition.R  check_motif_similarity.R  convert_gene_ids.R  functional_enrichment.R  go_enrich_readme.md  go_enrichment.R  mo_gene_mapper_vitis.R  module_expression_summary.R  motif_class_overlaps_visual.R  motif_predictability_vitis.R  split_by_expression.R  visualize_highlighted_dendrograms.R
src/moca/mo_imp/: plot_saliency_maps.R
src/moca/mo_nom/: eda_&_visuals_motifs.R  get_matrices.R
src/moca/mo_proj/: 00_filter_blamm_occ.R  00_filter_blamm_occR  01_filter_genomic_features.R  02_motif_enrichment.R  03_motif_performance.R  calculate_motif_match_similarity.R  filter_blamm_occ_00.R  filter_genomic_features_01.R  gene_length_summary.R  motif_enrichment_03.R  motif_performance04.R
src/moca/mo_range/: 00_get_seql_per_pattern.R  01_motif_ranges_meta.R  02_plot_ranges.R  get_seql_per_pattern.R  motif_ranges_meta.R  plot_ranges.R
src/moca/mo_var/: .gitignore  00_prepare_genotype_gene_lists.R  QUICK_REFERENCE.md  (+2 more)
src/tomtom/: annotate_tomtom.py  modisco_compare_jaspar.py
test_folder/: check_outputs.py
vitis_cre/src/: create_generic_features.py  create_target_file.py  create_validation_genes.py  deepcre_crosspredict.py  deepcre_interpret.py  deepcre_motifs.py  deepcre_predict.py  extract_modisco_motifs.py  parsing.py  train_models.py  utils.py
(+43 files in other folders)
